@@ -1,12 +1,10 @@
 include ../packages.mk
 
-BINUTILS_VERSION=2.22
+BINUTILS_VERSION=2.28
 MINGWRT_VERSION=3.20
 W32API_DIR_VERSION=3.17
 W32API_VERSION=$(W32API_DIR_VERSION)-2
-#GCC_VERSION=4.6.1
-#GCC_SEPARATE_PACKAGES=1
-GCC_VERSION=4.7.0
+GCC_VERSION=4.9.4
 
 TARGET=i586-mingw32msvc
 PROGRAM_PREFIX=i586-mingw32msvc-
@@ -64,7 +62,7 @@ binutils-realclean: binutils-clean
 
 
 download/mingwrt-$(MINGWRT_VERSION)-mingw32-dev.tar.gz:
-	wget -nv -P download http://sourceforge.net/projects/mingw/files/MinGW/Base/mingw-rt/mingwrt-$(MINGWRT_VERSION)/mingwrt-$(MINGWRT_VERSION)-mingw32-dev.tar.gz
+	wget -nv -P download http://sourceforge.net/projects/mingw/files/MinGW/Base/mingwrt/mingwrt-$(MINGWRT_VERSION)/mingwrt-$(MINGWRT_VERSION)-mingw32-dev.tar.gz
 
 mingw-runtime-install.tag: download/mingwrt-$(MINGWRT_VERSION)-mingw32-dev.tar.gz
 	mkdir -p $(PREFIX)/$(TARGET)/include
@@ -79,7 +77,6 @@ mingw-runtime-clean:
 .PHONY: mingw-runtime-realclean
 mingw-runtime-realclean: mingw-runtime-clean
 	rm -f mingw-runtime-download.tag
-
 
 download/w32api-$(W32API_VERSION)-mingw32-dev.tar.lzma:
 	wget -nv -P download http://sourceforge.net/projects/mingw/files/MinGW/Base/w32api/w32api-$(W32API_DIR_VERSION)/w32api-$(W32API_VERSION)-mingw32-dev.tar.lzma
@@ -98,28 +95,12 @@ w32api-clean:
 w32api-realclean: w32api-clean
 	rm -f w32api-download.tag
 
-
-ifdef GCC_SEPARATE_PACKAGES
-download/gcc-core-$(GCC_VERSION).tar.bz2:
-	wget -nv -P download ftp://ftp.gnu.org/gnu/gcc/gcc-$(GCC_VERSION)/gcc-core-$(GCC_VERSION).tar.bz2
-
-download/gcc-g++-$(GCC_VERSION).tar.bz2:
-	wget -nv -P download ftp://ftp.gnu.org/gnu/gcc/gcc-$(GCC_VERSION)/gcc-g++-$(GCC_VERSION).tar.bz2
-
-gcc-unpack.tag: download/gcc-core-$(GCC_VERSION).tar.bz2 download/gcc-g++-$(GCC_VERSION).tar.bz2
-	for i in $^; do \
-	  tar -xjf $$i; \
-	done
-	#bunzip2 -c download/gcc*.tar.bz2 | tar -xf -
-	touch $@
-else
 download/gcc-$(GCC_VERSION).tar.bz2:
 	wget -nv -P download ftp://ftp.gnu.org/gnu/gcc/gcc-$(GCC_VERSION)/gcc-$(GCC_VERSION).tar.bz2
 
 gcc-unpack.tag: download/gcc-$(GCC_VERSION).tar.bz2
 	tar -xjf download/gcc-$(GCC_VERSION).tar.bz2
 	touch $@
-endif
 
 gcc-configure.tag: gcc-unpack.tag
 	rm -rf objdir-gcc
@@ -144,7 +125,6 @@ gcc-install.tag: gcc-make.tag
 	cd objdir-gcc && \
 	PATH=$(PATH):$(PREFIX)/bin \
 	make install
-	rm -r $(PREFIX)/man $(PREFIX)/info
 	touch $@
 
 .PHONY: gcc-clean
